# multiCalendar

./: README.md  io.github.r_sergii.multiCalendar.json  meson.build  ua.inf.multiapps.multiCalendar.json
data/: io.github.r_sergii.multiCalendar.appdata.xml.in  io.github.r_sergii.multiCalendar.desktop.in  io.github.r_sergii.multiCalendar.gschema.xml  meson.build  ua.inf.multiapps.multiCalendar.desktop.in  ua.inf.multiapps.multiCalendar.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  multicalendar.gresource.xml  window.ui  window.vala
src/services/appsload/: appsload_model.vala  appsload_provider.vala  appsload_service.vala
src/services/calendar/: calendar_model.vala  calendar_provider.vala  calendar_service.vala
src/services/calendar0/: calendar0_model.vala  calendar0_provider.vala  calendar0_service.vala
src/services/connect/: connect_model.vala  connect_provider.vala  connect_service.vala
src/services/days/: days_model.vala  days_provider.vala  days_service.vala
src/services/info/: info_model.vala  info_provider.vala  info_service.vala
src/services/months/: months_model.vala  months_provider.vala  months_service.vala
src/services/settings/: locale_model.vala  settings_model.vala  settings_service.vala  theme_model.vala
src/services/translate/: translate_model.vala  translate_provider.vala  translate_service.vala
src/services/wiki/: wiki_model.vala  wiki_provider.vala  wiki_service.vala
src/views/: await_view.vala  calendar06_view.vala  calendar10_view.vala  calendar6_view.vala  calendar_view.vala  datechange_view.vala  horiz_view.vala  info_view.vala  vert_view.vala  wait_view.vala
src/widgets/circular-progress-bar/: circle-indicator.vala  circular-progress-bar.vala  procent-progress-bar.vala
src/widgets/date_widget/: date_widget.css  date_widget.vala
src/widgets/progress_widget/: progress_widget.vala
src/widgets/theme_switcher/: theme_switcher.css  theme_switcher.vala
src/windows/browser_window/: browser_window.ui  browser_window.vala
src/windows/language_window/: language_window.ui  language_window.vala
src/windows/main_window/: main_window.ui  main_window.vala
src/windows/no_connect_window/: no_connect_window.vala
src/windows/splash_window/: splash_window.vala
