application_id = 'io.github.r_sergii.multiCalendar'
calendar_france_id = 'calendar_france'
calendar_east_id = 'calendar_east'
calendar_buddhist_id = 'calendar_buddhist'
calendar_bahai_id = 'calendar_bahai'
calendar_hebrew_id = 'calendar_hebrew'
calendar_persian_id = 'calendar_persian'
calendar_julian_id = 'calendar_julian'
calendar_japan_id = 'calendar_japan'
calendar_hijiri_id = 'calendar_hijiri'
calendar_hc_id = 'calendar_hc'
calendar_gregorian_id = 'calendar_gregorian'
calendar_ephiop_id = 'calendar_ephiop'
calendar_coptic_id = 'calendar_coptic'
ok_id = 'ok128'
cancel_id = 'cancel128'
no_connect_id = 'no_connect128'

scalable_dir = join_paths('hicolor', 'scalable', 'apps')
install_data(
  join_paths(scalable_dir, ('@0@.svg').format(application_id)),
  join_paths(scalable_dir, ('@0@.svg').format(calendar_france_id)),
  join_paths(scalable_dir, ('@0@.svg').format(calendar_east_id)),
  join_paths(scalable_dir, ('@0@.svg').format(calendar_buddhist_id)),
  join_paths(scalable_dir, ('@0@.svg').format(calendar_bahai_id)),
  join_paths(scalable_dir, ('@0@.svg').format(calendar_hebrew_id)),
  join_paths(scalable_dir, ('@0@.svg').format(calendar_persian_id)),
  join_paths(scalable_dir, ('@0@.svg').format(calendar_julian_id)),
  join_paths(scalable_dir, ('@0@.svg').format(calendar_japan_id)),
  join_paths(scalable_dir, ('@0@.svg').format(calendar_hijiri_id)),
  join_paths(scalable_dir, ('@0@.svg').format(calendar_hc_id)),
  join_paths(scalable_dir, ('@0@.svg').format(calendar_gregorian_id)),
  join_paths(scalable_dir, ('@0@.svg').format(calendar_ephiop_id)),
  join_paths(scalable_dir, ('@0@.svg').format(calendar_coptic_id)),
  join_paths(scalable_dir, ('@0@.svg').format(ok_id)),
  join_paths(scalable_dir, ('@0@.svg').format(cancel_id)),
  join_paths(scalable_dir, ('@0@.svg').format(no_connect_id)),
  install_dir: join_paths(get_option('datadir'), 'icons', scalable_dir)
)

symbolic_dir = join_paths('hicolor', 'symbolic', 'apps')
install_data(
  join_paths(symbolic_dir, ('@0@-symbolic.svg').format(application_id)),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)
